rename server localhost2 in default.conf 1.9

--- a/1.9/test/test-app/nginx-cfg/default.conf
+++ b/1.9/test/test-app/nginx-cfg/default.conf
@@ -1,6 +1,6 @@
 server {
   listen            8080;
-  server_name       localhost;
+  server_name       localhost2;
 
   location / {
     root            /opt/app-root/src;
